--- a/Frontend_P/index.html
+++ b/Frontend_P/index.html
@@ -64,23 +64,23 @@
 
         <div class="jogos">
             <div class="card">
-                <!-- <img src="/Frontend_P/ASSETS/Jogos/DemoGame.jpg" alt=""> -->
+                <img src="/Frontend_P/ASSETS/Jogos/DemoGame.jpg" alt="">
                 <h5>Demo Game</h5>
                 <p>Fusce vel lorem imperdiet turpis aliquam vestibulum sit amet non nunc. Donec vel ipsum varius, egestas sem vitae, faucibus neque. Morbi fringilla ipsum eget ligula bibendum, in tempor magna egestas. Etiam ac commodo nulla. Aliquam ac nisl vel nisi varius hendrerit. Etiam at luctus arcu. Integer non laoreet mauris. Duis eu sapien malesuada, fringilla sapien eu, facilisis felis. Vivamus posuere gravida orci, sit amet aliquet augue commodo eget.</p>
             </div>
             
             <div class="card">
-                <!-- <img src="/Frontend_P/ASSETS/Jogos/DemoGame2.jpg" alt=""> -->
+                <img src="/Frontend_P/ASSETS/Jogos/DemoGame2.jpg" alt="">
                 <h5>Demo Game II</h5>
                 <p>Donec at lectus convallis, semper mauris vitae, congue nisl. Sed consequat magna velit. Pellentesque tincidunt ex a enim gravida dictum. Mauris quis augue sodales, vestibulum odio vel, convallis orci. Curabitur luctus suscipit enim, vitae fringilla metus pretium eget. Fusce dictum eros vel posuere suscipit. Fusce eget ultricies lectus. Cras non turpis eros.</p>
             </div>
             <div class="card">
-                <!-- <img src="/Frontend_P/ASSETS/Jogos/DemoGameRemastered.jpg" alt=""> -->
+                <img src="/Frontend_P/ASSETS/Jogos/DemoGameRemastered.jpg" alt="">
                 <h5>Demo Game: Remastered</h5>
                 <p>Vestibulum eu feugiat urna. Mauris vel tincidunt lectus, ac ultricies est. Morbi sit amet sem auctor, dictum odio et, dapibus lectus. Cras sit amet sollicitudin ipsum. Aenean sit amet erat risus. Suspendisse faucibus ligula at lacus tristique, et ultrices ipsum commodo. Fusce posuere vel turpis eget porta. Nulla lacinia elit id vehicula egestas. Etiam hendrerit est non aliquet euismod. Curabitur a egestas mi. Sed congue commodo tincidunt.</p>
             </div>
             <div class="card">
-                <!-- <img src="/Frontend_P/ASSETS/Jogos/DemoGameFinale.jpg" alt=""> -->
+                <img src="/Frontend_P/ASSETS/Jogos/DemoGameFinale.jpg" alt="">
                 <h5>Demo Game III: Finale</h5>
                 <p>Integer hendrerit leo sit amet lacus placerat, a mattis tellus accumsan. Pellentesque imperdiet mi nulla, at laoreet leo dignissim et. Integer euismod ullamcorper mauris. Duis id nisi eget orci sodales commodo non vitae mauris. Fusce lobortis eros eu viverra sollicitudin. Maecenas cursus fermentum ex eu finibus. Donec non nisl vitae nibh pellentesque vestibulum facilisis sed odio. Mauris vestibulum nisi a dictum ornare.</p>
             </div>
