--- a/Frontend_P/index.html
+++ b/Frontend_P/index.html
@@ -94,12 +94,27 @@
     <section class="rankings">
         <h2>Rankings</h2>
 
+        <table>
+            <thead>
+                <th></th>
+                <th></th>
+                <th></th>
+            </thead>
+        </table>
     </section>
 
 
     <section class="perfil">
         <h2>Perfil</h2>
 
+        <div>
+            <p>
+            </p>
+        </div>
+
+        <div>
+            <img src="" alt="">
+        </div>
     </section>
 
 
