--- a/Frontend_P2/index.html
+++ b/Frontend_P2/index.html
@@ -3,15 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Byte Cafe</title>
+    <title>Byte Box</title>
+
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header></header>
+    <header>
+        <div>
+            <img src="/Frontend_P2/midias/img/logo-byte-box.png" alt="logo byte box">
+        </div>
+        <nav>
+            <li>Home</li>
+            <li>Sobre</li>
+            <li>Serviços</li>
+            <li>Contato</li>
+        </nav>
+    </header>
     
-    <div>
-        <h1></h1>
-        <img src="" alt="">
-    </div>
+  <div>
+    <h1>Bem vindo a Byte Box.</h1>
+    <img src="/Frontend_P2/midias/img/banner-01.jpeg" alt="">
+  </div>
+
     
 </body>
 </html>
